[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/book.png" type="Texture" id=1]
[ext_resource path="res://Main Game/Coin.gd" type="Script" id=2]
[ext_resource path="res://SFX/CoinPickup.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/explosion_coin.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 16, 15 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4.04252, 3.84 )

[node name="Coin" type="AnimatedSprite" groups=[
"coin",
]]
position = Vector2( 35.84, 83.84 )
frames = SubResource( 14 )
frame = 2
playing = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CoinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinArea"]
shape = SubResource( 15 )

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="." to="." method="_on_Coin_animation_finished"]
[connection signal="body_entered" from="CoinArea" to="." method="_on_CoinArea_body_entered"]
